<resources>
    <string name="app_name">Booky</string>
    <string name="action_settings">Settings</string>
    <string name="main">Начало</string>
    <string name="profile">Профил</string>
    <string name="library">Библиотека</string>
    <string name="currentRead">В момента чете</string>
    <string name="suggestions">Предложения</string>
    <string name="social">Площад</string>
    <string name="settings">Настройки</string>
    <string name="exit">Изход</string>
    <string name="book">Книга</string>
    <string name="bookPlaceholderName">Произведение - Автор</string>
    <string name="bookPlaceholderGenre">Жанр - Жанр</string>
    <string name="bookPlaceholderYearPublished">Година на издаване - 2018г.</string>

    <string-array name="bookState">
        <!--
        Reading,
        Finished,
        Wishlist,
        Dropped,
        Onhold
        -->
        <item>В момента чете</item>
        <item>Прочетена</item>
        <item>В списък с желания</item>
        <item>Непрочетена</item>
        <item>Оставена</item>
    </string-array>

</resources>
