<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/lib/com.projectlibrary.library"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bookActivity"
    android:background="@drawable/background">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="244dp">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="228dp"
            android:layout_height="299dp"

            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"


            android:layout_marginTop="8dp"
            android:src="@drawable/placeholder_book"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.04"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/bookTitleAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:shadowColor="@color/colorBlack"
            android:text="@string/bookPlaceholderName"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.509"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.674"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.093" />
        <!--android:shadowDx="5px"
                    android:shadowDy="5px"
                    android:shadowRadius="5px"-->
        <TextView
            android:id="@+id/bookGenre"
            android:layout_width="237dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:shadowColor="@color/colorBlack"
            android:text="@string/bookPlaceholderGenre"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.206"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.85"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.868" />

        <TextView
            android:id="@+id/bookYearPublished"
            android:layout_width="275dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:shadowColor="@color/colorBlack"
            android:text="@string/bookPlaceholderYearPublished"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.29"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.773"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.279"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.797" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app2:layout_constraintBottom_toBottomOf="parent"
            app2:layout_constraintEnd_toEndOf="parent"
            app2:layout_constraintHorizontal_bias="0.214"
            app2:layout_constraintStart_toStartOf="parent"
            app2:layout_constraintTop_toTopOf="parent"
            app2:layout_constraintVertical_bias="0.904"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.292"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.963" />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>